Change Head Title and Icon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bisnis Kos GA</title>
+	<title>Genetic Algorithm for Boarding House Business</title>
+	<link rel="shortcut icon" href="https://st.depositphotos.com/1000423/1267/i/450/depositphotos_12673266-stock-photo-dna-strand-illustration.jpg">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/5e59a4bfec.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./ga.css">
